--- a/index.html
+++ b/index.html
@@ -1,92 +1,4 @@
 <!--Main Navigation-->
-<header>
-
-  <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-
-      <div class="container">
-
-          <!-- Navbar brand -->
-          <a class="navbar-brand" href="#">Navbar</a>
-          <!-- Collapsible content -->
-          <div class="collapse navbar-collapse" id="basicExampleNav">
-
-              <!-- Links -->
-              <ul class="navbar-nav mr-auto smooth-scroll">
-                  <li class="nav-item">
-                      <a class="nav-link" href="#intro">Home</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#best-features">Features</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#examples">Examples</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#gallery">Gallery</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#contact">Contact</a>
-                  </li>
-              </ul>
-              <!-- Links -->
-
-              <!-- Social Icon  -->
-              <ul class="navbar-nav nav-flex-icons">
-                  <li class="nav-item">
-                      <a class="nav-link"><i class="fab fa-facebook"></i></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link"><i class="fab fa-twitter"></i></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link"><i class="fab fa-instagram"></i></a>
-                  </li>
-              </ul>
-          </div>
-          <!-- Collapsible content -->
-
-      </div>
-
-  </nav>
-  <!--/.Navbar-->
-
-  <!--Mask-->
-  <div id="intro" class="view">
-
-      <div class="mask rgba-black-strong">
-
-          <div class="container-fluid d-flex align-items-center justify-content-center h-100">
-
-              <div class="row d-flex justify-content-center text-center">
-
-                  <div class="col-md-10">
-
-                      <!-- Heading -->
-                      <h2 class="display-4 font-weight-bold white-text pt-5 mb-2">PHOTOGRAPHY</h2>
-
-                      <!-- Divider -->
-                      <hr class="hr-light">
-
-                      <!-- Description -->
-                      <h4 class="white-text my-4">We keep this love in a photograph
-                        We made these memories for ourselves
-                        Where our eyes are never closing
-                        Hearts are never broken
-                        And time's forever frozen still</h4>
-                      <button type="button" class="btn btn-outline-white">Read more<i class="fa fa-book ml-2"></i></button>
-
-                  </div>
-
-              </div>
-
-          </div>
-
-      </div>
-
-  </div>
-  <!--/.Mask-->
-
 </header>
 <!--Main Navigation-->
 
@@ -94,75 +6,14 @@
 <main class="mt-5">
   <div class="container">
 
-      <!--Section: Best Features-->
-      <section id="photographer & art director, RW" class="text-center">
-
-          <!-- Heading -->
-          <h2 class="mb-5 font-weight-bold">Best Features</h2>
-
-          <!--Grid row-->
-          <div class="row d-flex justify-content-center mb-4">
-
-              <!--Grid column-->
-              <div class="col-md-8">
-
-                  <!-- Description -->
-                  <p class="grey-text">We keep this love in a photograph
-                    We made these memories for ourselves
-                    Where our eyes are never closing
-                    Hearts are never broken
-                    And time's forever frozen still</p>
-
-              </div>
-              <!--Grid column-->
-
-          </div>
-          <!--Grid row-->
-
-          <!--Grid row-->
-          <div class="row">
-
-              <!--Grid column-->
-              <div class="col-md-4 mb-5">
-                  <i class="fa fa-camera-retro fa-4x orange-text"></i>
-                  <h4 class="my-4 font-weight-bold">Experience</h4>
-                  <p class="grey-text">here’s going to be times it doesn’t work quite right, or needs that little bit of extra TLC</p>
-              </div>
-              <!--Grid column-->
-
-              <!--Grid column-->
-              <div class="col-md-4 mb-1">
-                  <i class="fa fa-heart fa-4x orange-text"></i>
-                  <h4 class="my-4 font-weight-bold">Happiness</h4>
-                  <p class="grey-text">You won't ever be alone,Inside these pages you just hold me</p>
-              </div>
-              <!--Grid column-->
-
-              <!--Grid column-->
-              <div class="col-md-4 mb-1">
-                  <i class="fa fa-bicycle fa-4x orange-text"></i>
-                  <h4 class="my-4 font-weight-bold">Adventure</h4>
-                  <p class="grey-text">i'll wait for you to come home</p>
-              </div>
-              <!--Grid column-->
-
-          </div>
-          <!--Grid row-->
-
-      </section>
-      <!--Section: Best Features-->
-
-      <hr class="my-5">
-
-      <!--Section: Examples-->
-      <section id="examples" class="text-center">
-
           <!-- Heading -->
           <h2 class="mb-5 font-weight-bold">Moglie's Nature Photography</h2>
+            
+          <hr class="my-5">
 
           <!--Grid row-->
           <div class="row">
-
+              
               <!--Grid column-->
               <div class="col-lg-4 col-md-12 mb-4">
 
@@ -263,7 +114,7 @@
 
       <!--Section: Gallery-->
       <section id="gallery">    
-                  <p>by <a><strong>Msoglie</strong></a>, 27/09/2020</p>
+                  <p>by <a><strong>Moglie</strong></a>, 27/09/2020</p>
                   <a class="btn btn-primary btn-md">Read more</a>
 
               </div>
