add the html structure to pages

--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
 <!--Main Navigation-->
 </header>
 <!--Main Navigation-->
-
-<!--Main layout-->
-<main class="mt-5">
-  <div class="container">
-
-          <!-- Heading -->
-          <h2 class="mb-5 font-weight-bold">Moglie's Nature Photography</h2>
+ <!-- Heading -->
+    <h2 class="mb-5 font-weight-bold">Moglie's Nature Photography</h2>
             
-          <hr class="my-5">
+     <hr class="my-5">
 
-          <!--Grid row-->
-          <div class="row">
-              
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-12 mb-4">
+            <div class="view overlay z-depth-1-half">
+                <img src="images/IMG-20180508-WA0004.jpg" class="img-fluid" alt="">
+                <div class="mask rgba-white-slight"></div>
+                </div>
 
-                  <div class="view overlay z-depth-1-half">
-                      <img src="images/IMG-20180508-WA0004.jpg" class="img-fluid" alt="">
-                      <div class="mask rgba-white-slight"></div>
-                  </div>
-
-                  <h4 class="my-4 font-weight-bold">romania</h4>
-                  <p class="grey-text">summer time in romania</p>
+                <h4 class="my-4 font-weight-bold">romania</h4>
+                <p class="grey-text">summer time in romania</p>
 
               </div>
-              <!--Grid column-->
-
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-6 mb-4">
 
                   <div class="view overlay z-depth-1-half">
                       <img src="images/IMG-20180422-WA0011.jpg" class="img-fluid" alt="">
@@ -40,10 +25,6 @@
                   <p class="grey-text">water park.</p>
 
               </div>
-              <!--Grid column-->
-
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-6 mb-4">
 
                   <div class="view overlay z-depth-1-half">
                       <img src="images/IMG-20180422-WA0024.jpg" class="img-fluid" alt="">
@@ -54,16 +35,6 @@
                   <p class="grey-text">Does this place look familiar, thats right.it is indeed the Uhuru Park of Nairobi</p>
 
               </div>
-              <!--Grid column-->
-
-          </div>
-          <!--Grid row-->
-
-          <!--Grid row-->
-          <div class="row">
-
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-12 mb-4">
 
                   <div class="view overlay z-depth-1-half">
                       <img src="images/IMG-20180330-WA0011.jpg" class="img-fluid" alt="">
@@ -88,10 +59,6 @@
                   <p class="grey-text">Roses are red.sugar is sweet and so are you</p>
 
               </div>
-              <!--Grid column-->
-
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-6 mb-4">
 
                   <div class="view overlay z-depth-1-half">
                       <img src="images/IMG-20180415-WA0014.jpg" class="img-fluid" alt="">
@@ -102,114 +69,33 @@
                   <p class="grey-text">New Adventure.</p>
 
               </div>
-              <!--Grid column-->
-
-          </div>
-          <!--Grid row-->
-
-      </section>
-      <!--Section: Examples-->
 
       <hr class="my-5">
 
       <!--Section: Gallery-->
       <section id="gallery">    
                   <p>by <a><strong>Moglie</strong></a>, 27/09/2020</p>
-                  <a class="btn btn-primary btn-md">Read more</a>
-
-              </div>
-              <!--Grid column-->
-
-          </div>
-          <!--Grid row-->
+                  <a class="button">Read more</a>
 
       </section>
       <!--Section: Gallery-->
-
-      <hr class="my-5">
 
       <!--Section: Contact-->
       <section id="contact">
 
           <!-- Heading -->
-          <h2 class="mb-5 font-weight-bold text-center">Contact us</h2>
+          <h2 class="font-weight-bold text-center">Contact us</h2>
 
           <!--Grid row-->
           <div class="row">
 
-              <!--Grid column-->
-              <div class="col-lg-5 col-md-12">
-                  <!-- Form contact -->
-                  <form class="p-5 grey-text">
-                      <div class="md-form form-sm"> <i class="fa fa-user prefix"></i>
-                          <input type="text" id="form3" class="form-control form-control-sm">
-                          <label for="form3">Your name</label>
-                      </div>
-                      <div class="md-form form-sm"> <i class="fa fa-envelope prefix"></i>
-                          <input type="text" id="form2" class="form-control form-control-sm">
-                          <label for="form2">Your email</label>
-                      </div>
-                      <div class="md-form form-sm"> <i class="fa fa-tag prefix"></i>
-                          <input type="text" id="form32" class="form-control form-control-sm">
-                          <label for="form34">Subject</label>
-                      </div>
-                      <div class="md-form form-sm"> <i class="fa fa-pencil prefix"></i>
-                          <textarea type="text" id="form8" class="md-textarea form-control form-control-sm" rows="4"></textarea>
-                          <label for="form8">Your message</label>
-                      </div>
-                      <div class="text-center mt-4">
-                          <button class="btn btn-primary">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
-                      </div>
-                  </form>
-                  <!-- Form contact -->
-              </div>
-              <!--Grid column-->
+          <!-- Form contact -->
+            <p><i class="fa fa-map fa-1x mr-2 grey-text"></i>Nairobi, NB 10012</p>
+            </div>
 
-              <!--Grid column-->
-              <div class="col-lg-7 col-md-12">
+            <p><i class="fa fa-building fa-1x mr-2 grey-text"></i>Mon - Fri, 8:00-22:00</p>
 
-                  <!--Grid row-->
-                  <div class="row text-center">
-
-                      <!--Grid column-->
-                      <div class="col-lg-4 col-md-12 mb-3">
-
-                          <p><i class="fa fa-map fa-1x mr-2 grey-text"></i>Nairobi, NB 10012</p>
-                      </div>
-                      <!--Grid column-->
-
-                      <!--Grid column-->
-                      <div class="col-lg-4 col-md-6 mb-3">
-
-                          <p><i class="fa fa-building fa-1x mr-2 grey-text"></i>Mon - Fri, 8:00-22:00</p>
-
-                      </div>
-                      <!--Grid column-->
-
-                      <!--Grid column-->
-                      <div class="col-lg-4 col-md-6 mb-3">
-
-                          <p><i class="fa fa-phone fa-1x mr-2 grey-text"></i>+ 254 234 567 89</p>
-
-                      </div>
-                      <!--Grid column-->
-
-                  </div>
-                  <!--Grid row-->
-
-                  <!--Google map-->
-                  <div id="map-container" class="z-depth-1-half map-container mb-5" style="height: 400px"></div>
-
-              </div>
-              <!--Grid column-->
-
-          </div>
-          <!--Grid row-->
-
-      </section>
-      <!--Section: Contact-->
-
-  </div>
+            <p><i class="fa fa-phone fa-1x mr-2 grey-text"></i>+ 254 234 567 89</p>
 </main>
 <!--Main layout-->
 
@@ -332,6 +218,7 @@
       </div>
   </div>
   <!--/.Footer Links-->
+  <hr class="my-5">
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2018 Copyright:
