add the html structure to pages

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!--Main Navigation-->
-</header>
-<!--Main Navigation-->
- <!-- Heading -->
-    <h2 class="mb-5 font-weight-bold">Moglie's Nature Photography</h2>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>moglie's fashion blog</title>
+        <link rel="stylesheet" href="css/styles.css">
+    
+    </head>
+     <h2 class="header">Moglie's Nature Photography</h2>
             
-     <hr class="my-5">
+     <hr class="introduction">
+     <h2 class="header">PHOTOGRAPHER & FASHION ENTHUSIAST</h2>
 
-            <div class="view overlay z-depth-1-half">
+            <div class="view">
                 <img src="images/IMG-20180508-WA0004.jpg" class="img-fluid" alt="">
                 <div class="mask rgba-white-slight"></div>
                 </div>
@@ -181,3 +185,4 @@
 
 </footer>
 <!-- Footer -->
+</html>
