add html structure to pages

--- a/index.html
+++ b/index.html
@@ -10,63 +10,11 @@
      <hr class="introduction">
      <h2 class="header">PHOTOGRAPHER & FASHION ENTHUSIAST</h2>
 
-            <div class="view">
-                <img src="images/IMG-20180508-WA0004.jpg" class="img-fluid" alt="">
-                <div class="mask rgba-white-slight"></div>
-                </div>
-
-                <h4 class="my-4 font-weight-bold">summer time in Romania</h4>
-
-              </div>
-
-                  <div class="view overlay z-depth-1-half">
-                      <img src="images/IMG-20180422-WA0011.jpg" class="img-fluid" alt="">
-                      <div class="mask rgba-white-slight"></div>
-                  </div>
-
-                  <h4 class="my-4 font-weight-bold">Water Park</h4>
-
-              </div>
-
-                  <div class="view overlay z-depth-1-half">
-                      <img src="images/IMG-20180422-WA0024.jpg" class="img-fluid" alt="">
-                      <div class="mask rgba-white-slight"></div>
-                  </div>
-
-                  <h4 class="my-4 font-weight-bold">International uhuru park</h4>
-
-              </div>
-
-                  <div class="view overlay z-depth-1-half">
-                      <img src="images/IMG-20180330-WA0011.jpg" class="img-fluid" alt="">
-                      <div class="mask rgba-white-slight"></div>
-                  </div>
-
-                  <h4 class="my-4 font-weight-bold">A plaace i could call home</h4>
-
-              </div>
-              <!--Grid column-->
-
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-6 mb-4">
-
-                  <div class="view overlay z-depth-1-half">
-                      <img src="images/IMG-20180422-WA0010.jpg" class="img-fluid" alt="">
-                      <div class="mask rgba-white-slight"></div>
-                  </div>
-
-                  <h4 class="my-4 font-weight-bold">Roses are red.sugar is sweet and so are you</h4>
-
-              </div>
-
-                  <div class="view overlay z-depth-1-half">
-                      <img src="images/IMG-20180415-WA0014.jpg" class="img-fluid" alt="">
-                      <div class="mask rgba-white-slight"></div>
-                  </div>
-
-                  <h4 class="my-4 font-weight-bold">New Adventures</h4>
-
-              </div>
+     <div class = "picture-projects">
+                <div class = "picture-one"><img src="" alt=""></div>
+                <div class = "picture-two"><img src="" alt=""></div>
+                <div class = "picture-three"><img src="" alt=""></div>
+     </div>
 
       <hr class="my-5">
 
