add html structure to pages

--- a/index.html
+++ b/index.html
@@ -3,134 +3,53 @@
     <head>
         <title>moglie's fashion blog</title>
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     </head>
      <h2 class="header">Moglie's Nature Photography</h2>
             
      <hr class="introduction">
      <h2 class="header">PHOTOGRAPHER & FASHION ENTHUSIAST</h2>
-
+     <div class="icons">
+        <a href="#" class="fa fa-facebook">facebook</a>
+        <a href="#" class="fa fa-twitter">twitter</a>
+        <a href="#" class="fa fa-instagram">instagram</a>
+     </div>
+     <h2 class ="aboutme-header">ABOUT ME</h2>
+     <P class="intro"> 
+        Confident and dedicated photographer with experience in both professional and freelance photography. Holds nearly 10 years of working experience with great variety in order to tackle any photography job quickly and effectively. Intimately familiar taking high quality digital photographs, including framing, selecting and setting up lighting, and determining advanced shutter and lens options. Prioritizes communication on the job to avoid errors. A candidate that combines a long professional career with dedicated freelance photography ideals and loyalty.
+     </P>
      <div class = "picture-projects">
-                <div class = "picture-one"><img src="" alt=""></div>
-                <div class = "picture-two"><img src="" alt=""></div>
-                <div class = "picture-three"><img src="" alt=""></div>
+                <div class = "picture-one">
+                    <img class = "img-project1" src="images/IMG-20180422-WA0009.jpg" alt="">
+                </div>
+                <div class = "picture-two">
+                    <img class = "img-project2" src="images/IMG-20180415-WA0014.jpg" alt="">
+                </div>
+                <div class = "picture-three">
+                    <img class = "img-project3" src="images/IMG-20180330-WA0011.jpg" alt="">
+                </div>
      </div>
 
       <hr class="my-5">
 
-      <!--Section: Contact-->
       <section id="contact">
 
-          <!-- Heading -->
           <h2 class="font-weight-bold text-center">Contact us</h2>
 
-          <!--Grid row-->
           <div class="row">
 
-          <!-- Form contact -->
             <p><i class="grey-text"></i>Nairobi, NB 10012</p>
             </div>
 
             <p><i class="grey-text"></i>Mon - Fri, 8:00-22:00</p>
 
             <p><i class="grey-text"></i>+ 254 234 567 89</p>
-</main>
-<!--Main layout-->
+<hr class="my-5">
 
-<!-- Footer -->
-<footer class="page-footer font-small unique-color-dark">
-
-  <!-- Social buttons -->
-  <div class="primary-color">
-      <div class="container">
-          <!--Grid row-->
-          <div class="align-items-center">
-                  <h6 class="mb-0 white-text">Get connected with us on social networks!</h6>
-              </div>
-                  <!--Facebook-->
-                      <i class="fab fa-facebook white-text mr-4"> </i>
-                  </a>
-                  <!--Twitter-->
-                      <i class="fab fa-twitter white-text mr-4"> </i>
-                  </a>
-                  <!--Google +-->
-                      <i class="fab fa-google-plus white-text mr-4"> </i>
-                  </a>
-                  <!--Linkedin-->
-                      <i class="fab fa-linkedin white-text mr-4"> </i>
-                  </a>
-                  <!--Instagram-->
-                      <i class="fab fa-instagram white-text mr-lg-4"> </i>
-                  </a>
-    <!-- Social buttons -->
-
-    <!--Footer Links-->
-
-          <!--First column-->
-                  <strong>Company name</strong>
-              </h6>
-              <p>moglieish best shots.</p>
-          </div>
-          <!--/.First column-->
-
-          <!--Second column-->
-                  <strong>Products</strong>
-              </h6>
-              <p>
-                  <a href="#!">Nature Photography</a>
-              </p>
-              <p>
-                  <a href="#!">All Art</a>
-              </p>
-              <p>
-                  <a href="#!">potraits</a>
-              </p>
-              <p>
-                  <a href="#!">studio sessions</a>
-              </p>
-          </div>
-          <!--/.Second column-->
-
-          <!--Third column-->
-                  <strong>Useful links</strong>
-              </h6>
-              <p>
-                  <a href="#!">Your Account</a>
-              </p>
-              <p>
-                  <a href="#!">Shipping Rates</a>
-              </p>
-              <p>
-                  <a href="#!">Help</a>
-              </p>
-          </div>
-          <!--/.Third column-->
-
-          <!--Fourth column-->
-                  <strong>Contact</strong>
-              </h6>
-              <p>
-                  <i class="fas fa-home"></i></i> Nairobi, NB 10012, kenya</p>
-              <p>
-                  <i class="fa fa-envelope mr-3"></i> salmaclientele@gmail.com</p>
-              <p>
-                  <i class="fa fa-phone mr-3"></i> + 254 234 567 88</p>
-              <p>
-                  <i class="fa fa-print mr-3"></i> + 254 234 567 89</p>
-          </div>
-          <!--/.Fourth column-->
-
-      </div>
-  </div>
-  <!--/.Footer Links-->
-  <hr class="my-5">
-
-  <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2018 Copyright:
-      <a href="https://mdbootstrap.com/bootstrap-tutorial/"> moglieish.com</a>
+
   </div>
-  <!-- Copyright -->
 
 </footer>
-<!-- Footer -->
 </html>
